    - Don't display the manual task.
    - Don't clear the screen before running aptitude.
  * Use debconf-apt-progress during installs (except if the user chooses
    manual selection), to get a fancy progress bar and completly limit output
    when run inside debconf to debconf protocol output.
  * Use debconf-apt-progress for removals too.
  * Pass -y to aptitude remove.

  [ Translations of tasks ]
  * French updated
  * Czech updated
  * Danish updated
  * Brazilian Portuguese updated
  * Simplified Chinese updated. Closes: #340806
  * Bengali added
  * Italian updated
  * Galician updated
  * Spanish updated

  [ Translations of programs ]
  * French updated
  * Czech updated
  * Danish updated
  * Brazilian Portuguese updated
  * Simplified Chinese updated
  * Italian updated
  * Galician updated
  * Spanish updated

  [ Translations of debconf templates ]
  * French updated
  * Czech updated
  * Danish updated
  * Brazilian Portuguese updated
  * Simplified Chinese updated
  * Bengali added
  * Galician updated
  * Spanish updated

 -- Joey Hess <joeyh@debian.org>  Sat,  3 Dec 2005 18:13:29 -0500

tasksel (2.33) unstable; urgency=low

  [ Joey Hess ]
  * Update Hebrew tasks. Closes: #323241
  * Remove doc-debian-ko. Closes: #330111
  * Remove openoffice.org-kde from desktop task (was already in kde-desktop
    task).

  [ Translations of tasks ]
    - Updated Japanese translation. (Kenshi Muto)
    - Updated Dutch translation (Bart Cornelis)
    - Updated Italian translation (Giuseppe Sacco)
    - Updated Norwegian Bokmal translation (Bjorn Steensrud). Closes: #316734
    - Updated Tagalog translation (Eric Pareja)
    - Updated Russian translation (Yuri Kozlov). Closes: #334251
    - Updated Swedish translation (Daniel Nylander). Closes: #333810, #333815
    - Updated Galician translation (Jacobo Tarrio)

  [ Translations of programs ]
    - Updated Russian translation (Yuri Kozlov). Closes: #334251